syntax = "proto3";

package com.xtdb.protos;
import "google/protobuf/struct.proto";
import "common.proto";

message Transaction {
  oneof transaction_type {
    Put put = 1;
    Delete delete = 2;
    Evict evict = 3;
    Match match = 4;
  }
}

message Put {
  IdType id_type = 1;
  string xt_id = 2;
  google.protobuf.Struct document = 3;
  OptionDatetime valid_time = 4;
  OptionDatetime end_valid_time = 5;
}

message Delete {
  string document_id = 1;
  IdType id_type = 2;
  OptionDatetime valid_time = 3;
  OptionDatetime end_valid_time = 4;
}

message Evict {
  string document_id = 1;
  IdType id_type = 2;
}

message Match {
  string document_id = 1;
  IdType id_type = 2;
  google.protobuf.Struct document = 3;
  OptionDatetime valid_time = 4;
}

message SubmitRequest { 
  repeated Transaction tx_ops = 1;
  OptionDatetime tx_time = 2; 
}

message SubmitResponse {
  string tx_time = 1;
  int64 tx_id = 2;
}

message SpeculativeTxRequest { 
  repeated Transaction tx_ops = 1;
}

message SpeculativeTxResponse {
  string valid_time = 1;
  string tx_time = 2;
  int64 tx_id = 3;
  int32 entity_cache_size = 4;
  int32 batch_size = 5;
}